     error.
Bug: Issue #45, unescaped output on TopRules chart, make chart unusable 
     with special character in rule description. Thanks to Ibere Tizio, 
     by report and propose a fix.
Bug: Issue #47, type in redirect definition on waf-fle.conf (apache 
     config file) for WAF-FLE.
Bug: Issue #47, error in IP address validation function of Add Sensor in 
     managment interface.     
Bug: Change the management menu behavior, to address a performance 
     impact described by Juraj Sakala (in issue #14 on GitHub). A 
     temporary denial of service happens while database events are 
     counted for get sensor information. Now the user can change (on 
     config.php and in runtime) if Sensor Info will be loaded or not.
     Database schema change to fix this, but will change in update 
     process only on next release, if you want to change now access you 
     MySQL and use the command below (this can need some time and disk 
     space): 
     
     # use waffle;
     # ALTER TABLE `waffle`.`events` ADD INDEX `sensor3` (`sensor_id`);


Version 0.6.3: Jan, 30 2014
-------------
Bug: mlog2waffle in batch mode dont exit after finish. Fixed.
Bug: fixed mlog2waffle.ubuntu init script to allow start as a daemon in 
     batch mode.
Bug: Fixed issues #21 and #25, when an incomplete request is rejected by
     waf-fle's  database schema, producing an error 500;
Bug: Fixed filter dialog showed in login page when accessed with a valid 
     session
Bug: Fixed issue #20, setup now handle database privilege when mysql and 
     waf-fle are in diferent hosts. Now you can specify the client 
     hostname/address or even a wildcard on setup.
Bug: Fixed issue #26, where the timming filters are not filtering 
     properly. 
Bug: Fixed issue #28, delete events by filter hit a error 500, when any 
     filter beyond date range is used.
Improve: Event delete limit ($deleteLimit) and delete wait ($deleteWait)