@@ -553,12 +553,9 @@ if (isset($_GET['esrc']) OR isset($_GET['Not_esrc'])) {
         } else {
             unset($_SESSION['filter']['Not_esrc']);
         }
-        if (isset($_GET['esrc']) AND preg_match('/^(?:2[0-4]\d|25[0-5]|[01]?\d\d?)\.(?:2[0-4]\d|25[0-5]|[01]?\d\d?)\.(?:2[0-4]\d|25[0-5]|[01]?\d\d?)\.(?:2[0-4]\d|25[0-5]|[01]?\d\d?)(?P<cidr>\/\d{1,2})?$/', $_GET['esrc'], $ipSplit)) {
-            $cidr = str_replace("/", "", $ipSplit['cidr']);
-            if ($cidr == NULL OR (1 <= $cidr AND $cidr <= 32)) {
-                $_SESSION['filter']['esrc'] = $_GET['esrc'];
-                $_SESSION['filterIndexHint'][] = "a_client_ip";
-            }
+        if (isset($_GET['esrc']) AND validateIP($_GET['esrc'])) {
+			$_SESSION['filter']['esrc'] = $_GET['esrc'];
+			$_SESSION['filterIndexHint'][] = "a_client_ip";
         } else {
             unset($_SESSION['filter']['esrc']);
             unset($_SESSION['filter']['Not_esrc']);
